# ADAMS-frontend

./: .env.example  README.md  README_Evaluation_Comparison.md  README_Workflow.md  USER_GUIDE.md  pyproject.toml  start_backend_poetry.py  start_frontend_comparison_poetry.py  start_frontend_poetry.py  start_frontend_two_step.py  start_services.py  test_two_step_workflow.py
backend/agent/: metric_discussion_agent.py
backend/api/: app.py  evaluation_service.py  models.py  requirements.txt
backend/backend/: evaluation_history.json
backend/evaluator/: base_evaluator.py
backend/execution_pipeline/: execution_pipeline.py
backend/notebooks/: evaluator_example.ipynb
backend/scripts/: agent_e2e.py  evaluation_pipeline_example.py  synthetic_mistake_pipeline_example.py
backend/utils/: llm.py
frontend/: app.py  app_comparison.py  app_two_step.py  backend_client.py
scripts/: annotation_pipeline_example.py  evaluation_pipeline_example.py
src/dataset/: TSBC_10_rows_test.csv  TSBC_clean.csv  TSBC_with_key_points_test.csv  annotated_dataset_20250703_202122.csv  download_dataset.py  sample_rag_dataset.csv  train-00000-of-00001.parquet
